add tables, identity tables and relationships defined

--- a/RegistrationDirectory.API/appsettings.json
+++ b/RegistrationDirectory.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlCon": "User ID=postgres;Password=qwert123;Host=localhost;Port=5432;Database=RegistirationDirectory;Pooling=true;Connection Lifetime=0;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
