--- a/RegistrationDirectory.Service/RegistrationDirectory.Service.csproj
+++ b/RegistrationDirectory.Service/RegistrationDirectory.Service.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Absract\" />
-    <Folder Include="Concrete\" />
+    <PackageReference Include="Ninject" Version="3.3.6" />
   </ItemGroup>
 
   <ItemGroup>
