--- a/RegistrationDirectory.API/appsettings.json
+++ b/RegistrationDirectory.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOption": {
+    "Audience": [ "www.myapi.com" ],
+    "Issuer": "www.myapi.com",
+    "AccessTokenExpiration": 5,
+    "RefreshTokenExpiration": 600,
+    "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
+  },
   "ConnectionStrings": {
     "SqlCon": "User ID=postgres;Password=qwert123;Host=localhost;Port=5432;Database=RegistirationDirectory;Pooling=true;Connection Lifetime=0;"
   },
