add workerservice. add backgroundservice createpicture and addwatermark.

--- a/RegistrationDirectory.DataAccess/RegistrationDirectory.DataAccess.csproj
+++ b/RegistrationDirectory.DataAccess/RegistrationDirectory.DataAccess.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RegistirationDirectory.SharedLibrary\RegistirationDirectory.SharedLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
