--- a/RegistrationDirectory.Watermark/appsettings.json
+++ b/RegistrationDirectory.Watermark/appsettings.json
@@ -1,11 +1,4 @@
 {
-  "TokenOption": {
-    "Audience": [ "www.myapi.com" ],
-    "Issuer": "www.myapi.com",
-    "AccessTokenExpiration": 5,
-    "RefreshTokenExpiration": 600,
-    "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
-  },
   "ConnectionStrings": {
     "RabbitMQ": "amqp://guest:guest@localhost:49154/",
     "SqlCon": "User ID=postgres;Password=qwert123;Host=localhost;Port=5432;Database=RegistirationDirectory;Pooling=true;Connection Lifetime=0;"
@@ -13,8 +6,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
