add quartz library. create weekly and monthly reports and save the generated reports to excel.

--- a/RegistrationDirectory.API/RegistrationDirectory.API.csproj
+++ b/RegistrationDirectory.API/RegistrationDirectory.API.csproj
@@ -16,8 +16,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.5" />
+    <PackageReference Include="Quartz" Version="3.4.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Excel\" />
+    <Folder Include="Logs\" />
     <Folder Include="PhotosWithWatermark\" />
     <Folder Include="Photos\" />
   </ItemGroup>
