--- a/RegistrationDirectory.Service/RegistrationDirectory.Service.csproj
+++ b/RegistrationDirectory.Service/RegistrationDirectory.Service.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.96.0" />
+    <PackageReference Include="MailKit" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="MimeKit" Version="3.3.0" />
     <PackageReference Include="Ninject" Version="3.3.6" />
     <PackageReference Include="Quartz" Version="3.4.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
